# Ignitum

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  loom.yml  miri.yml
crates/ignitum-compiler/: Cargo.toml
crates/ignitum-compiler/src/: lib.rs
crates/ignitum-jit/: Cargo.toml
crates/ignitum-jit/src/: compiler.rs  lib.rs  memory.rs  trap.rs
crates/ignitum-parser/: Cargo.toml
crates/ignitum-parser/src/: lib.rs
crates/ignitum-runtime/: Cargo.toml
crates/ignitum-runtime/examples/: run_wasm.rs
crates/ignitum-runtime/src/: instance.rs  lib.rs  store.rs
crates/ignitum-sys/: Cargo.toml
crates/ignitum-sys/src/: lib.rs
